--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,3 +73,15 @@
     border-radius: 2px;
     color:#ffffff;
 }
+.nav-link.active {
+    color: #5CB85C!important;
+    border-color: #5CB85C #5CB85C #5CB85C!important;
+    font-weight: 600!important;
+}
+.nav-tabs {
+    border-bottom: 1px solid #5CB85C!important;
+}
+.nav-link {
+    color: #000000;!important;
+    font-weight: 600!important;
+}
